# AQUALYTICSMVP

./: .gitignore  BACKEND_DEPLOYMENT.md  GITHUB_ACTIONS_SETUP.md  HEALTHCHECK_CORS_GUIDE.md  README.md  VERCEL_SETUP.md  package.json  pnpm-lock.yaml  test-rbac-simple.sh  vercel.json
.cursor/: mcp.example.json
.cursor/rules/: aqualytics_project_rules.mdc
.cursor/rules/taskmaster/: dev_workflow.mdc  taskmaster.mdc
.github/: dependabot.yml
.github/workflows/: ci-cd.yml  cleanup.yml  pr-check.yml  release.yml  security-scan.yml
.taskmaster/: state.json
.taskmaster/docs/: prd.txt  supabase-auth-setup.md
.taskmaster/reports/: task-complexity-report.json
.taskmaster/tasks/: tasks.json
apps/web/: README.md  middleware.ts  next.config.ts  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/analitica/: page.tsx
apps/web/src/app/competencias/: page.tsx
apps/web/src/app/dashboard/: page.tsx
apps/web/src/app/login/: page.tsx
apps/web/src/app/nadadores/: page.tsx
apps/web/src/app/register/: page.tsx
apps/web/src/app/resultados/: page.tsx
apps/web/src/components/analitica/: ComparisonTable.tsx  ComparisonView.tsx  (+4 more)
apps/web/src/contexts/: auth-context.tsx  stepper-context.tsx  theme-context.tsx
apps/web/src/hooks/: index.ts  useAnalitica.ts  useAuth.ts  useCompetencias.ts  useDashboard.ts  useDebounce.ts  useKeyboardNavigation.ts  useNadadorAnalytics.ts  useNadadores.ts  usePruebas.ts  useResultados.ts
apps/web/src/lib/: categoria-utils.ts  chart-best-practices.md  chart-config.ts  coeficiente-variacion-ejemplo.ts  cv-demo.js  figma-utils.ts  index.ts  middleware-test.md  providers.tsx  supabase.ts  time-utils.ts
apps/web/src/stores/: dashboard-store.ts  resultados-store.ts  ui-store.ts
apps/web/src/styles/: figma-map.json
apps/web/src/types/: auth.ts  catalogos.ts  resultados.ts
database/ddl/: analytics_optimization_report.md  migrate_optimize_competencias_queries.sql  migrate_optimize_resultados_query_indexes.sql  resultados_query_optimization_report.md
docs/: RELEASE_NOTES.md  post-mvp-mejoras-analitica.md
scripts/: setup.sh
services/api/: .dockerignore  .env.backup  AUTHENTICATION_SETUP.md  Dockerfile  RBAC_GUIDE.md  alembic.ini  fly.toml  pyproject.toml  render.yaml
services/api/app/: __init__.py  main.py
services/api/app/api/: deps.py
services/api/app/api/v1/: api.py
services/api/app/api/v1/endpoints/: __init__.py  analitica.py  auth.py  catalogos.py  competencias.py  dashboard.py  nadadores.py  resultados.py
services/api/app/core/: config.py
services/api/app/db/: deps.py
services/api/app/middleware/: __init__.py  security.py
services/api/app/models/: __init__.py  catalogos.py  competencia.py  nadador.py  resultado.py  user.py
services/api/app/schemas/: __init__.py  analitica.py  auth.py  catalogos.py  competencia.py  nadador.py  resultado.py
services/api/app/utils/: __init__.py  categoria_utils.py  jwt.py
services/api/migrations/: README  env.py
(+66 files in other folders)
